Fixed text alignment
Fixed text alignment

--- a/components/sections/home/WeTranslate/WeTranslate.module.css
+++ b/components/sections/home/WeTranslate/WeTranslate.module.css
@@ -1,6 +1,4 @@
-.section {
-  text-align: center;
-}
+
 .section-title {
   margin-bottom: 16px;
 }
